Refactor email handling and password reset features
- Updated .env file to standardize email configuration variables.
- Refactored password reset URLs to use custom views for better handling.
- Enhanced email sending functionality in EmailService to utilize Django settings.
- Improved password reset templates for better user experience and responsiveness.
- Added custom views for password reset completion and confirmation with context data.
- Removed deprecated SMTP fields from Setting model and adjusted related code.
- Added new CSS styles for improved UI consistency across password reset forms.

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-SMTP_USER=determined_blackburn_m0gpqt
-SMTP_PASSWORD=dd4c5284-90db-4ada-90c4-e8c2768efe35
-SMTP_HOST=smtp.c1.liara.email
-SMTP_PORT=587
+EMAIL_HOST=smtp.c1.liara.email
+EMAIL_PORT_SMTP=587
+EMAIL_PORT_SMTPS=465
+EMAIL_HOST_USER=determined_blackburn_m0gpqt
+EMAIL_HOST_PASSWORD=dd4c5284-90db-4ada-90c4-e8c2768efe35
 DEFAULT_FROM_EMAIL=info@ibarge.work
