Add Docker support and PostgreSQL configuration
- Introduced Dockerfile and docker-compose.yml for containerized application setup.
- Updated .env file to include PostgreSQL database configuration variables.
- Modified settings.py to switch from SQLite to PostgreSQL using environment variables.
- Added requirements.txt for necessary Python packages including Django and psycopg2-binary.

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ EMAIL_PORT_SMTPS=465
 EMAIL_HOST_USER=determined_blackburn_m0gpqt
 EMAIL_HOST_PASSWORD=dd4c5284-90db-4ada-90c4-e8c2768efe35
 DEFAULT_FROM_EMAIL=info@ibarge.work
+DB_NAME=shopfull_db
+DB_USER=your_postgres_username
+DB_PASSWORD=your_postgres_password
+DB_HOST=localhost
+DB_PORT=5432
