Update environment configuration and enhance database setup script
- Added ADMIN_PASSWORD to .env file for admin user creation.
- Updated .gitignore to ensure .env file is ignored properly.
- Enhanced create_db.sh script to create an admin user if it doesn't exist, improving initial setup for new deployments.
- Improved output messages in Persian for clarity during database migration and setup processes.

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ DB_USER=postgres
 DB_PASSWORD=S9JAvUaHq3QyljHrMnNw
 DB_HOST=round-shop-db.roundstudio.svc
 DB_PORT=5432
+ADMIN_PASSWORD=RoundShop2024!
