Update environment configuration and docker-compose settings
- Replaced individual database configuration variables in .env with a single DB_CONNECTION_STRING for streamlined database connection management.
- Modified docker-compose.yml to change service port mapping from 443 to 8000, ensuring proper access configuration for the application.

--- a/.env
+++ b/.env
@@ -4,9 +4,4 @@ EMAIL_PORT_SMTPS=465
 EMAIL_HOST_USER=determined_blackburn_m0gpqt
 EMAIL_HOST_PASSWORD=dd4c5284-90db-4ada-90c4-e8c2768efe35
 DEFAULT_FROM_EMAIL=info@ibarge.work
-DB_NAME=shop_db_dreamyaft
-DB_USER=postgres
-DB_PASSWORD=S9JAvUaHq3QyljHrMnNw
-DB_HOST=round-shop-db.roundstudio.svc
-DB_PORT=5432
-ADMIN_PASSWORD=RoundShop2024!
+DB_CONNECTION_STRING=postgres://postgres:Moeen....6168@voo8w4c8oogokwcso8o4kskg:5432/shop_db_dreamyaft
