--- a/.env
+++ b/.env
@@ -4,4 +4,8 @@ EMAIL_PORT_SMTPS=465
 EMAIL_HOST_USER=determined_blackburn_m0gpqt
 EMAIL_HOST_PASSWORD=dd4c5284-90db-4ada-90c4-e8c2768efe35
 DEFAULT_FROM_EMAIL=info@ibarge.work
-DB_CONNECTION_STRING=postgres://postgres:Moeen....6168@voo8w4c8oogokwcso8o4kskg:5432/shop_db_dreamyaft
+DB_NAME=shop_db_dreamyaft
+DB_USER=postgres
+DB_PASSWORD=Moeen....6168
+DB_HOST=87.248.145.188
+DB_PORT=5432
